--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "jsonstat-validator"
-version = "0.1.0"
+version = "0.1.1"
 description = "A Python validator for the JSON-stat 2.0 standard format, based on Pydantic."
 readme = "README.md"
 authors = [
@@ -34,6 +34,9 @@ dev = [
     "pytest>=8.1.1",
     "build>=1.0.0",
     "twine>=4.0.0",
+    "black>=23.0.0",
+    "flake8>=6.0.0",
+    "isort>=5.12.0",
 ]
 
 [project.urls]
@@ -47,4 +50,15 @@ packages = ["jsonstat_validator"]
 [tool.pytest.ini_options]
 markers = [
     "samples: marks tests that use JSON-stat sample files",
-] 
+]
+testpaths = ["tests"]
+
+[tool.black]
+line-length = 90
+target-version = ["py38", "py39", "py310", "py311", "py312"]
+include = '\.pyi?$'
+
+[tool.isort]
+profile = "black"
+line_length = 90
+multi_line_output = 3 
