--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -3,6 +3,8 @@ name: CI/CD Pipeline
 on:
   push:
     branches: [main]
+    tags:
+      - 'v*'  # Run workflow on version tags (v1.0.0, etc.)
   pull_request:
     branches: [main]
   release:
@@ -42,7 +44,7 @@ jobs:
 
   deploy:
     needs: test
-    if: github.event_name == 'release'
+    if: github.event_name == 'release' || startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     permissions:
       id-token: write  # Required for PyPI trusted publishing
@@ -65,8 +67,12 @@ jobs:
     
     - name: Update version in code
       run: |
-        # Extract version from the GitHub release tag
-        VERSION=${GITHUB_REF#refs/tags/v}
+        # Extract version from the GitHub release tag or git tag
+        if [[ $GITHUB_REF == refs/tags/* ]]; then
+          VERSION=${GITHUB_REF#refs/tags/v}
+        else
+          VERSION=${GITHUB_REF#refs/tags/v}
+        fi
         echo "Setting version to $VERSION"
         
         # Update version in both files
@@ -77,9 +83,15 @@ jobs:
       run: |
         # Extract version and release name
         VERSION=${GITHUB_REF#refs/tags/v}
-        RELEASE_NAME=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                        "https://api.github.com/repos/${{ github.repository }}/releases/latest" | \
-                        jq -r .name)
+        
+        # Try to get release name if this is a release event
+        if [[ $GITHUB_EVENT_NAME == 'release' ]]; then
+          RELEASE_NAME=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                          "https://api.github.com/repos/${{ github.repository }}/releases/latest" | \
+                          jq -r .name)
+        else
+          RELEASE_NAME=""
+        fi
         
         TODAY=$(date '+%Y-%m-%d')
         
