--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,11 @@ authors = [
 license = {file = "LICENSE"}
 classifiers = [
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Topic :: Software Development :: Libraries :: Python Modules",
@@ -26,7 +26,7 @@ classifiers = [
 keywords = ["json-stat", "validator", "json", "data-engineering", "pydantic", "python", "fao"]
 requires-python = ">=3.8"
 dependencies = [
-    "pydantic>=2.0.0,<3.0.0",
+    "pydantic==2.11.2",
 ]
 
 [project.optional-dependencies]
@@ -55,7 +55,7 @@ testpaths = ["tests"]
 
 [tool.black]
 line-length = 90
-target-version = ["py38", "py39", "py310", "py311", "py312"]
+target-version = ["py39", "py310", "py311", "py312", "py313"]
 include = '\.pyi?$'
 
 [tool.isort]
