--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+.ruff_cache/
 
 # Environments
 .env
@@ -44,13 +45,25 @@ ENV/
 env.bak/
 venv.bak/
 
-# mypy
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Type checking
 .mypy_cache/
 .dmypy.json
 dmypy.json
+.pytype/
 
-# macOS specific files
+# macOS
 .DS_Store
 
-# Notebooks
+# Jupyter Notebooks
 *.ipynb
+.ipynb_checkpoints/
+
+# Logs
+*.log
