--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "jsonstat-validator"
 version = "0.2.2"
@@ -13,8 +9,6 @@ authors = [
 license = {file = "LICENSE"}
 classifiers = [
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
@@ -24,19 +18,17 @@ classifiers = [
     "Topic :: Software Development :: Quality Assurance",
 ]
 keywords = ["json-stat", "validator", "json", "data-engineering", "pydantic", "python", "fao"]
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 dependencies = [
-    "pydantic==2.11.2",
+    "pydantic>=2.11.9",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=8.1.1",
-    "build>=1.0.0",
-    "twine>=4.0.0",
-    "black>=23.0.0",
-    "flake8>=6.0.0",
-    "isort>=5.12.0",
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
+    "pre-commit>=4.3.0",
+    "ruff>=0.13.2",
 ]
 
 [project.urls]
@@ -45,20 +37,51 @@ dev = [
 "Documentation" = "https://github.com/ahmed-hassan19/jsonstat-validator#readme"
 
 [tool.setuptools]
-packages = ["jsonstat_validator"]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.pytest.ini_options]
 markers = [
     "samples: marks tests that use JSON-stat sample files",
 ]
 testpaths = ["tests"]
+pythonpath = ["src"]
 
-[tool.black]
-line-length = 90
-target-version = ["py39", "py310", "py311", "py312", "py313"]
-include = '\.pyi?$'
+# Ruff configuration
+[tool.ruff]
+line-length = 88
+target-version = "py311"
 
-[tool.isort]
-profile = "black"
-line_length = 90
-multi_line_output = 3 
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "UP",  # pyupgrade
+    "ARG", # flake8-unused-arguments
+    "SIM", # flake8-simplify
+    "PTH", # flake8-use-pathlib
+]
+ignore = [
+    "E501",  # line too long, handled by ruff format
+    "B008",  # do not perform function calls in argument defaults
+]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**/*" = ["ARG"]  # Allow unused args in tests
+
+[tool.ruff.lint.isort]
+known-first-party = ["jsonstat_validator"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+
+[build-system]
+requires = ["uv_build>=0.8.22,<0.9.0"]
+build-backend = "uv_build"
